mini-elp/test_projects/parse_error/parse_error_a/src/parse_error_a.app.src
{application, parse_error_a,
  [{description, "example app to show how we handle parse errors"}, {vsn, "inplace"}, {applications, [kernel, stdlib]}]
}.
